force-app/main/default/objects/Query__mdt/Query__mdt.object-meta.xml
<CustomObject>
    <description
  >This custom metadata type holds SOQL/SOSL queries for various objects. The queries can be used in Apex Classes that do mass update/delete operations.</description>
    <label>Query</label>
    <pluralLabel>Queries</pluralLabel>
</CustomObject>