force-app/main/default/objects/Query__mdt/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <description
  >The condition field defines the WHERE-clause of the query.</description>
    <label>Condition</label>
    <type>TextArea</type>
</CustomField>