force-app/main/default/objects/Query__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description
  >This field is used to describe the purpose of the query record.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>