force-app/main/default/objects/Query__mdt/fields/Is_Hard_Delete__c.field-meta.xml
<CustomField>
    <fullName>Is_Hard_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >This field is used for queries of operation type Delete. If this checkbox is checked, the records marked for deletion are &quot;hard deleted&quot;, meaning they cannot be recovered from the recycle bin.</description>
    <inlineHelpText
  >Used for queries of operation type Delete. If this checkbox is checked, the records marked for deletion are &quot;hard deleted&quot;, meaning they cannot be recovered from the recycle bin.</inlineHelpText>
    <label>Hard Delete</label>
    <type>Checkbox</type>
</CustomField>