force-app/main/default/objects/Query__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description
  >This field describes whether the query is active or not. Only active query records will be considered in ex. the scheduled delete job.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>