force-app/main/default/objects/Query__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>The primary object the query is used on.</description>
    <label>Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Queries</relationshipLabel>
    <relationshipName>Queries</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>