force-app/main/default/objects/Query__mdt/listViews/All_Queries.listView-meta.xml
<ListView>
    <fullName>All_Queries</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Object__c</columns>
    <columns>Description__c</columns>
    <columns>Operation_Type__c</columns>
    <columns>Condition__c</columns>
    <columns>Is_Hard_Delete__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Queries</label>
    <language>en_US</language>
</ListView>